presets in profile now shown correctly, endpoint for booking by child build